footer y alumno guard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-shared-menu-unrouted></app-shared-menu-unrouted>
 
 <router-outlet></router-outlet>
+
+<app-shared-footer-unrouted></app-shared-footer-unrouted>
